25/11/2010:
	- Removed final CRLF from JTL, Zoomify and DeepZoom requests, which causes
	  problems with http pipelining in firefox.


24/11/2010:
	- Added extra checks to both TPTImage and KakaduImage for whether the
	  requested resolution exists.
	- Added ability to KakaduImage to downsize resolutions that were not generated
	  during encoding.
	- Added decompressor.finish() to catch block as finish crashes if called after
	  thread environment shut down.


18/11/2010:
	- Fixed problem when clipping when applying watermarks for both 8 and 16 bit images.


15/11/2010:
	- Added memcached support via libmemcached. List of servers passed via
	  MEMCACHED_SERVERS environment variable. Length of time the cache
	  remains valid set by optional MEMCACHED_TIMEOUT environment variable
	  (default is 3600 seconds). Storage is at output level, rather than tile
	  level, so is complementary to internal tile cache.
	  Thanks to Moravian Library in Brno (Moravska zemska knihovna v Brne,
	  http://www.mzk.cz/) R&D grant MK00009494301 & Old Maps Online
	  (http://www.oldmapsonline.org/) from the Ministry of Culture
	  of the Czech Republic.


06/11/2010:
	- Modification to Cache.h to use string::capacity() function instead of length()
	  to determine space used by string.


31/10/2010:
	- Added simple watermarking support via Watermark class. New environment
	  variables added for the watermark image, the opacity and probability.
	  Changes mainly to the TileManager and Session class. Watermarking happens
	  transparently within the TileManager class for all tiles. Thanks to
	  Moravian Library in Brno (Moravska zemska knihovna v Brne, http://www.mzk.cz/)
	  R&D grant MK00009494301 & Old Maps Online (http://www.oldmapsonline.org/)
	  from the Ministry of Culture of the Czech Republic.


15/09/2010:
	- Modified IIPImage.cc to enable handling of images with spectral band
	  indices with mixtures of 3 or 4 digits. For example, H1_pyr_000_090.tif
	  and H1_pyr_2500_090.tif.

